@@ -1,3 +1,7 @@
+* Tue Nov 15 2022 Joshua Hoblitt <josh@hoblitt.com> - 8.9.0
+- do not include auditd::config::grub on hosts without grub
+- fix simp base profile to work when grub_version fact is not set
+
 * Fri Jul 29 2022 Benedikt Fischer <benedikt.fischer@noris.de> - 8.8.0
 - Make parameter backlog_wait_time optional because there are auditd versions not supporting it
 
